--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <input type="password" id="password" name="password" required>
    
     <input type="submit" value="login">
-<p>You haven't created an account yet? <a href="index[1].html">Registration</a></p>
+<p>You haven't created an account yet? <a href="index1.html">Registration</a></p>
   </form>
   <p id="error-message" class="error-message"></p>
 </div>
