--- a/Index[1].html
+++ b/Index[1].html
@@ -38,6 +38,6 @@
   </form>
   <p id="error-message" class="error-message"></p>
 </div>
-  <script src="script[1].js"></script>
+  <script src="script1.js"></script>
 </body>
 </html>
